2014-06-27  6.8.9-5 Dirk Lemstra <dirk@snakeware...>
  * Disabled OpenCL acceleration when image has a 'mask' or 'clip-mask'.

2014-06-25  6.8.9-5 Cristy  <quetzlzacatenango@image...>
  * Use -define profile:skip=icc, for example,  to skip color profiles on read.

2014-06-23  6.8.9-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-4, SVN revision 16057.

2014-06-15  6.8.9-4 Cristy  <quetzlzacatenango@image...>
  * Support RMS argument for -evaluate-sequence and -statistic options.
  * Fix lseek define for a successful compile under 64-bit MinGW.
  * Pipe image to display program no longer reports an exception (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23532).
  * Check that profile is non-NULL in coders/tiff.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25770).

2014-06-08  6.8.9-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-3, SVN revision 15975.

2014-06-07  6.8.9-3 Glenn Randers-Pehrson <glennrp@image...>
  * Quiet warning about unused variable "skip_to_iend" in coders/png.c.

2014-06-07  6.8.9-3 Dirk Lemstra <dirk@snakeware...>
  * Fixed creation of SVG from 8bim clip path. (reference 
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=25594).

2014-06-02  6.8.9-3 Cristy  <quetzlzacatenango@image...>
  * The -version option returns 0 status (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25667).
  * The inline coder can now read from standard input (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25641).
  * Add '=' character to the santize whitelist.

2014-05-30  6.8.9-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-2, SVN revision 15932.

2014-05-18  6.8.9-2 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed some bugs in the PNG codec discovered by coverity analysis.

2014-05-14  6.8.9-2 Cristy  <quetzlzacatenango@image...>